モバイルに適したviewportを設定

--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 
-<head></head>
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
 
 <body>
   Google Cloud Vision API Key: <input id="ocr_api_key" type="password" style="width:300px" /><br />
