--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
     Google Cloud Vision API Key: <input id="ocr_api_key" type="password" style="width:300px" /><br />
     OpenAI API Key: <input id="openai_api_key" type="password" style="width:300px" /><br />
     Google Sheet API URL: <input id="sheet_api_url" type="password" style="width:300px" /><br />
+    <h2>名刺の画像</h2>
     <input id="image" type="file" accept="image/*" /><br />
     <img style="max-width: 400px;">
     <h2>読み取りデータ</h2>
