画像が表示される部分のスタイルを調整

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     <label>名刺の画像</label>
     <div>
       <input id="image" type="file" accept="image/*" /><br />
-      <img style="max-width: 320px;">
+      <img>
     </div>
 
     <label>読み取りデータ</label>
