Changed input field to text.

--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@
     <input type="checkbox" id="settings-toggle" style="display:none">
     <label for="settings-toggle" class="accordion-toggle">設定</label>
     <div class="settings-content">
-      Google Cloud Vision API Key: <input id="ocr_api_key" type="password" style="width:300px" /><br />
-      OpenAI API Key: <input id="openai_api_key" type="password" style="width:300px" /><br />
-      Google Sheet API URL: <input id="sheet_api_url" type="password" style="width:300px" /><br />
+      Google Cloud Vision API Key: <input id="ocr_api_key" type="text" style="width:300px" /><br />
+      OpenAI API Key: <input id="openai_api_key" type="text" style="width:300px" /><br />
+      Google Sheet API URL: <input id="sheet_api_url" type="text" style="width:300px" /><br />
     </div>
 
     <label>名刺の画像</label>
