--- a/index.html
+++ b/index.html
@@ -3,112 +3,7 @@
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
-    body {
-      font-family: 'Arial', sans-serif;
-      background-color: #f4f4f4;
-      margin: 0;
-      padding: 20px;
-      color: #333;
-    }
-
-    h2 {
-      color: #444;
-    }
-
-    input[type="password"],
-    input[type="file"] {
-      width: 100%;
-      padding: 10px;
-      margin: 10px 0;
-      display: inline-block;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-      box-sizing: border-box;
-    }
-
-    input[type="file"] {
-      background-color: #ffffff;
-    }
-
-    img {
-      max-width: 100%;
-      height: auto;
-      display: block;
-      margin-bottom: 20px;
-      border-radius: 5px;
-    }
-
-    pre {
-      background-color: #eee;
-      padding: 20px;
-      overflow: auto;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-    }
-
-    .container {
-      max-width: 600px;
-      margin: auto;
-      background-color: #fff;
-      padding: 20px;
-      border-radius: 8px;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    }
-
-    .button {
-      width: 100%;
-      background-color: #4CAF50;
-      color: white;
-      padding: 14px 20px;
-      margin: 8px 0;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-    }
-
-    .button:hover {
-      background-color: #45a049;
-    }
-
-    label {
-      display: block;
-      font-weight: bold;
-      font-size: large;
-    }
-
-    /* 設定の内容をデフォルトで隠す */
-    .settings-content {
-      max-height: 0;
-      overflow: hidden;
-      transition: max-height 0.3s ease-out;
-    }
-
-    /* チェックボックスがチェックされているときに設定の内容を表示 */
-    #settings-toggle:checked + .accordion-toggle + .settings-content {
-      max-height: 1000px; /* 十分に大きな値 */
-    }
-
-    .accordion-toggle {
-      cursor: pointer;
-      padding: 10px 0;
-      display: block;
-      font-weight: bold;
-      color: #444;
-      position: relative;
-    }
-
-    .accordion-toggle:after {
-      content: "+";
-      position: absolute;
-      left: 40px;
-      top: 13px;
-    }
-
-    #settings-toggle:checked ~ .accordion-toggle:after {
-      content: "-";
-    }
-  </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -138,116 +33,7 @@
     </div>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.5/dist/js.cookie.min.js"></script>
-  <script type="text/javascript">
-    const ocr_url = 'https://vision.googleapis.com/v1/images:annotate';
-    const openai_url = 'https://api.openai.com/v1/chat/completions';
-    const cookie_expires = 180;
-
-    navigator.geolocation.getCurrentPosition((position) => {
-      console.log(position);
-      document.querySelector('#lat').value = position.coords.latitude;
-      document.querySelector('#lng').value = position.coords.longitude;
-    });
-
-    const ocr = (base64string) => {
-      let body = {
-        requests: [
-          { image: { content: base64string }, features: [{ type: 'TEXT_DETECTION' }] }
-        ]
-      };
-      let ocr_api_key = document.querySelector('#ocr_api_key').value;
-      Cookies.set('ocr_api_key', ocr_api_key, { expires: cookie_expires, path: '' });
-
-      return fetch(`${ocr_url}?key=${ocr_api_key}`, {
-        method: 'POST',
-        body: JSON.stringify(body),
-        headers: {
-          'Content-Type': 'application/json',
-        }
-      });
-    }
-
-    const readFile = (file) => {
-      let reader = new FileReader();
-      const p = new Promise((resolve, reject) => {
-        reader.onload = (e) => {
-          document.querySelector('img').setAttribute('src', e.target.result);
-          resolve(e.target.result.replace(/^data:image\/(png|jpeg);base64,/, ''));
-        };
-      })
-      reader.readAsDataURL(file);
-      return p;
-    };
-
-    const JSONification = (text) => {
-      let openai_api_key = document.querySelector('#openai_api_key').value;
-      Cookies.set('openai_api_key', openai_api_key, { expires: cookie_expires, path: '' });
-      let schema = `{
-        "会社名": "string",
-        "部署名": "string",
-        "氏名": "string",
-        "会社住所": "string | null",
-        "電話番号": "string | null",
-        "e-mailアドレス": "string | null"
-      }`;
-      let system_prompt = `次の文字列から会社名、部署名、氏名、会社住所、電話番号、e-mailアドレスを抜き出して、JSON形式で出力してください。JSONのスキーマは次の通りです${schema}`;
-      let body = {
-        model: 'gpt-4o-mini',
-        response_format: { type: 'json_object' },
-        messages: [
-          { role: 'system', content: system_prompt },
-          { role: 'user', content: text }
-        ]
-      }
-
-      return fetch(openai_url, {
-        method: 'POST',
-        body: JSON.stringify(body),
-        headers: {
-          'Content-Type': 'application/json',
-          Authorization: `Bearer ${openai_api_key}`,
-        }
-      });
-    };
-
-    const addData = (json) => {
-      let sheet_api_url = document.querySelector('#sheet_api_url').value;
-      Cookies.set('sheet_api_url', sheet_api_url, { expires: cookie_expires, path: '' });
-      let data = JSON.parse(json);
-      const lat = document.querySelector('#lat').value;
-      const lng = document.querySelector('#lng').value;
-      const mapUrl = `https://www.google.com/maps/search/?api=1&query=${lat}%2C${lng}`;
-      data.mapUrl = mapUrl;
-      return fetch(sheet_api_url, {
-        method: 'POST',
-        body: JSON.stringify(data)
-      });
-    };
-
-    document.querySelector('#ocr_api_key').value = Cookies.get('ocr_api_key') || '';
-    document.querySelector('#openai_api_key').value = Cookies.get('openai_api_key') || '';
-    document.querySelector('#sheet_api_url').value = Cookies.get('sheet_api_url') || '';
-    document.querySelector('#image').addEventListener('change', e => {
-      if (!e.target.files || e.target.files.length == 0) return;
-      Promise.resolve(e.target.files[0])
-        .then(readFile)
-        .then(ocr)
-        .then(res => res.json())
-        .then(res => {
-          let description = res.responses[0].textAnnotations[0].description;
-          return JSONification(description);
-        })
-        .then(res => res.json())
-        .then(res => {
-          let json = res.choices[0].message.content;
-          document.querySelector('pre').innerHTML = json;
-          return addData(json);
-        })
-        .catch(err => {
-          console.log(err);
-        });
-    });
-  </script>
+  <script src="app.js"></script>
 </body>
 
 </html>
