--- a/index.html
+++ b/index.html
@@ -12,13 +12,7 @@
     <input type="checkbox" id="settings-toggle" style="display:none">
     <label for="settings-toggle" class="accordion-toggle">設定</label>
     <div class="settings-content">
-      <textarea id="settings" name="settings" rows="5" cols="80">
-{
-  "google_cloud_vision_api_key": "YOUR_GOOGLE_CLOUD_VISION_API_KEY",
-  "openai_api_key": "YOUR_OPENAI_API_KEY",
-  "google_sheet_api_url": "YOUR_GOOGLE_SHEET_API_URL"
-}
-      </textarea>
+      <textarea id="settings" name="settings" rows="5" cols="80">YOUR_GOOGLE_CLOUD_VISION_API_KEY,YOUR_OPENAI_API_KEY,YOUR_GOOGLE_SHEET_API_URL</textarea>
     </div>
 
     <label>名刺の画像</label>
